Added flask quickstart

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr container-se744hg</title>
+<title>{% block title %}{% endblock %} - Flaskr container-vsnkubm</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
-  <h1>Flaskr container-se744hg</h1>
+  <h1>Flaskr container-vsnkubm</h1>
 </nav>
 <section class="content">
   <header>
